# automaster

./: Automaster.jucer  CMakeLists.txt  LIMITER_RESEARCH_REPORT.md  MASTERING_101.md  OZONE_WORKFLOW_IMPLEMENTATION.md  README.md  USAGE.md
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/Automaster.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: Automaster.sln  Automaster_SharedCode.vcxproj  Automaster_SharedCode.vcxproj.filters  Automaster_StandalonePlugin.vcxproj  Automaster_VST3.vcxproj  Automaster_VST3ManifestHelper.vcxproj  resources.rc
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AI/: FeatureExtractor.cpp  FeatureExtractor.h  LearningSystem.cpp  LearningSystem.h  ModelInterface.h  ONNXInference.cpp  ONNXInference.h  RulesEngine.cpp  RulesEngine.h
Source/DSP/: AnalysisEngine.cpp  AnalysisEngine.h  DSPUtils.h  DynamicsAnalyzer.cpp  DynamicsAnalyzer.h  Limiter.cpp  Limiter.h  LoudnessMeter.cpp  LoudnessMeter.h  MasteringChain.cpp  MasteringChain.h  MasteringEQ.cpp  MasteringEQ.h  MultibandCompressor.cpp  MultibandCompressor.h  ParameterGenerator.cpp  ParameterGenerator.h  ReferenceProfile.cpp  ReferenceProfile.h  SpectralAnalyzer.cpp  SpectralAnalyzer.h  StereoAnalyzer.cpp  StereoAnalyzer.h  StereoImager.cpp  StereoImager.h
Source/UI/: LookAndFeel.h  MeterComponents.cpp  MeterComponents.h  ProcessingChainView.cpp  ProcessingChainView.h  ReferenceWaveform.cpp  ReferenceWaveform.h  SpectrumAnalyzer.h  SpectrumAnalyzerUI.cpp  SpectrumAnalyzerUI.h
docs/: _config.yml  index.md
docs/assets/css/: style.scss
